--- a/index.html
+++ b/index.html
@@ -42,6 +42,11 @@
                     kind="captions"
                     srclang="English"
                     label="English Captions" />
+                <track
+                    src="assets/text-tracks/pidgeons-in-love-french.vtt"
+                    kind="captions"
+                    srclang="French"
+                    label="French Captions" />
             </video>
             <!-- This video should have controls and two track tags (for example, for English AND French subtitles) -->
         </div>
