--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
             <!-- TODO: Put the pigeons in love MP4 video here-->
             <video controls>
                 <source src="assets/videos/pigeons-in-love.mp4">
-                <!--<track
+                <track
                     src="assets/text-tracks/pidgeons-in-love-english.vtt"
                     kind="captions"
                     srclang="English"
-                    label="English Captions" />--->
+                    label="English Captions" />
                 <track
                     src="assets/text-tracks/pidgeons-in-love-french.vtt"
                     kind="captions"
